--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Android Project</string>
+    <string name="img_desc">Restaurant image</string>
+    <string name="fav_desc">Favorite button</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
