--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="listed_data_all">All</string>
     <string name="listed_data_favorites">Only favorites</string>
     <string name="listed_data_without_favorites">Without favorites</string>
+    <string name="country_text">Country</string>
     <string name="city_text">City</string>
     <string name="price_text">Price</string>
     <string name="price_all">All</string>
@@ -19,4 +20,8 @@
     <string name="price_3">3</string>
     <string name="price_4">4</string>
     <string name="save_button_text">Save</string>
+    <string name="filter_title">Filter</string>
+    <string name="list_title">List</string>
+    <string name="profile_title">Profile</string>
+    <string name="loading_message">Loading the data…</string>
 </resources>
