--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,16 @@
     <string name="app_name">Android Project</string>
     <!--  fragment_login  -->
     <string name="login_fragment_title">Login</string>
-    <string name="email_label_text">Email</string>
-    <string name="email_input_placeholder">Enter your email here</string>
-    <string name="password_label_text">Password</string>
-    <string name="password_input_placeholder">Enter your password here</string>
+    <string name="email_input_hint">Email</string>
+    <string name="password_input_hint">Password</string>
     <string name="login_button_text">Login</string>
     <string name="register_button_text">Register</string>
+    <!--  fragment register  -->
+    <string name="register_fragment_title">Register</string>
+    <string name="name_input_hint">Name</string>
+    <string name="address_input_hint">Address</string>
+    <string name="phone_input_hint">Phone</string>
+    <string name="confirm_input_hint">Confirm Password</string>
     <!--  item_layout  -->
     <string name="img_desc">Restaurant image</string>
     <string name="fav_desc">Favorite button</string>
@@ -38,4 +42,6 @@
     <string name="profile_title">Profile</string>
     <!--  fragment_loading  -->
     <string name="loading_message">Loading…</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
