--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="address_label_text">Address:</string>
     <string name="postal_code_label_text">Postal code:</string>
     <string name="phone_label_text">Phone:</string>
+    <string name="image_section_title">Images</string>
 </resources>
