--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="postal_code_label_text">Postal code:</string>
     <string name="phone_label_text">Phone:</string>
     <string name="image_section_title">Images</string>
+    <string name="call_btn_text">Call</string>
 </resources>
